impl find owners. Closes #53.

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,6 +5,7 @@
   <title>Pet Owners Index</title>
 </head>
 <body>
+<!--/*@thymesVar id="owner" type="guru.springframework.petclinic.model.Owner"*/-->
 <h2 th:text="'List of Owners'">List of Owners!</h2>
 
 <table class="table table-striped">
@@ -25,3 +26,4 @@
 </table>
 </body>
 </html>
+
