--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}" >
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
   <meta charset="UTF-8"/>
-  <title>Pet Owners Index</title>
+  <title>List of Pet Owners</title>
 </head>
 <body>
 <!--/*@thymesVar id="owner" type="guru.springframework.petclinic.model.Owner"*/-->
-<h2 th:text="'List of Owners'">List of Owners!</h2>
+<h2 th:text="'List of Owners'">Owners List</h2>
 
 <table class="table table-striped">
   <thead>
   <tr>
-    <th style="width: 150px;">ID</th>
+    <th style="width: 150px;">Id</th>
     <th style="width: 150px;">First Name</th>
     <th style="width: 150px;">Last Name</th>
   </tr>
   </thead>
   <tbody>
-  <tr th:each="owner: ${owners}">
-    <td th:text="${owner?.id}">1</td>
-    <td th:text="${owner?.firstName}">Carl</td>
-    <td th:text="${owner?.lastName}">Joe</td>
+  <tr th:each="owner : ${owners}">
+    <td th:text="${owner.id}">1</td>
+    <td th:text="${owner.firstName}">Carl</td>
+    <td th:text="${owner.lastName}">John</td>
   </tr>
   </tbody>
 </table>
 </body>
 </html>
-
